--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
-    "target": "es5"
+    "target": "es5",
+    "typeRoots": ["overrides", "node_modules/@types"]
   },
   "files": [
     "src/index.ts"
